seamless/tests/api_body_compile_tests/02_struct_no_serde_attrs.rs
#[seamless::ApiBody]
struct Foo {
    /// Hello there!
    hello: usize,
    /// Barry!
    #[serde(rename = "foo")]
    bar: String
}

fn main () {

}